--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "colors": "^1.1.2",
     "jimp": "^0.2.28",
-    "optimist": "^0.6.1"
+    "optimist": "^0.6.1",
+    "promise": "^8.0.1"
   },
   "bin": {
     "airesize": "./bin/ai-resize.js"
